[tool.poetry]
name = "pubmed-cli"
version = "0.1.0"
description = "A CLI tool to fetch PubMed papers"
authors = ["Swapna Pochampally <swapnapochampally96@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
requests = "^2.31.0"
lxml = "^5.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"







